--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "generator-meancrud",
-  "version": "0.0.1",
-  "description": "A generator for Yeoman",
+  "version": "0.0.2",
+  "description": "A Yeoman generator that will create add CRUD functionality for a new model in the Mean.io stack.",
   "keywords": [
     "yeoman-generator"
   ],
