updated code to work with latest mean.io stack

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "homepage": "https://github.com/MartyIce/generator-meancrud",
   "bugs": "https://github.com/MartyIce/generator-meancrud/issues",
   "author": {
-    "name": "",
+    "name": "Marty",
     "email": "",
     "url": "https://github.com/MartyIce"
   },
